<resources>
    <string name="app_name">FlyerBoard</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_post">Post Flyer</string>
    <string name="title_activity_moderate">Moderate</string>
    <string name="drawer_item_home">Flyers</string>
    <string name="drawer_item_post">Post Flyer</string>
    <string name="drawer_item_mod">Moderate</string>
    <string name="drawer_item_settings">Settings</string>

    <string
        name="uploadFlyer_pageTitle">Upload a Flyer</string>
    <string
        name="uploadFlyer_name">Flyer File</string>
    <string
        name="uploadFlyer_user">Your Name</string>
    <string
        name="uploadFlyer_email">Your Email</string>
    <string
        name="uploadFlyer_body">Flyer details or tags...</string>
    <string
        name="uploadFlyer_button">Post</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_flyer">FlyerActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
